eks/eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-service
  namespace: darasimi
  labels:
    app:  eks-deployment
spec:
  selector:
    app: eks-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
